2007-11-29 Damien Douxchamps http://damien.douxchamps.net/
	* SVN 461: Merge three functions (feature mode capabilities) into a
	           single one
	* SVN 460: - slightly different interface for message logging
	           - enum types should have mutually exclusive values
		   - add min/max/num values for several enum types
		   - merge log.h in control.h

2007-11-28 Damien Douxchamps http://damien.douxchamps.net/
	* SVN 459: added new error API, beta (Rudolf Leitgeb)
	* SVN 458: update of the README (Frederic Vernier)
	* SVN 457: fix color converion in grab_color_image2 (Frederic Vernier)
	* SVN 456: rename long function name dc1394_memory_is_save_in_operation
	           to shorter dc1394_memory_busy.
	* SVN 455: reinstate the verification code for video mode, format and
	           iso status
        * SVN 454: - temporarily remove the definition of the broadcast function
	             in control.h, since it's code has been commented-out in
		     control.c.
		   - remove video_mode, framerate and is_iso_on from
		     dc1394camera_t. 

2007-11-27 David Moore  <dcm@acm.org>
	* SVN 453: Reinstate the "unit_directory" field of dc1394camera_t

2007-11-27 Damien Douxchamps http://damien.douxchamps.net/
	* SVN 452: Initialize dc1394_camera_t.flags to zero when a new
	           camera is created.
        * SVN 451: Rename register access functions to dc1394_*.
	           Move the camera detection API earlier in control.h
        * SVN 450: Fix missing Basler error strings in internal.c

2007-11-26 David Moore  <dcm@acm.org>
	* SVN 449: Fix dc1394_multiview and dc1394_vloopback for new API
	* SVN 448: Update svn:ignore
	* SVN 447: Massive update of the platform specific API to support
		   the new enumeration API.  The new platform API is defined
		   in platform.h and is private to libdc1394.  Enumeration
		   functionality has split off into enumeration.c.  Some
		   naming inconsistencies of public functions have also been