@@ -350,8 +350,7 @@ typedef enum {
   DC1394_SUCCESS = 0,   /* Success is zero */
   DC1394_FAILURE,       /* Errors are positive numbers */
   DC1394_NO_FRAME = -2, /* Warnings or info are negative numbers */
-  DC1394_NO_CAMERA = 3,
-  DC1394_NOT_A_CAMERA,
+  DC1394_NOT_A_CAMERA = 3,
   DC1394_FUNCTION_NOT_SUPPORTED,
   DC1394_CAMERA_NOT_INITIALIZED,
   DC1394_INVALID_FEATURE,
@@ -377,8 +376,8 @@ typedef enum {
   DC1394_NO_ISO_CHANNEL,
   DC1394_NO_BANDWIDTH,
   DC1394_IOCTL_FAILURE,
-  DC1394_CAPTURE_IS_NOT_SET = -30,
-  DC1394_CAPTURE_IS_RUNNING = 31,
+  DC1394_CAPTURE_IS_NOT_SET = -29,
+  DC1394_CAPTURE_IS_RUNNING = 30,
   DC1394_RAW1394_FAILURE,
   DC1394_BASLER_NO_MORE_SFF_CHUNKS,
   DC1394_BASLER_CORRUPTED_SFF_CHUNK,
